	- More robust implementation of updatable result sets. Checks that
	  _all_ primary keys of the table have been selected.
	- 'LOAD DATA LOCAL INFILE ...' now works, if your server is configured
	  to allow it. Can be turned off with the 'allowLoadLocalInfile' 
	  property (see the README).
	- Substitute '?' for unknown character conversions in single-byte
	  character sets instead of '\0'.
	  
11-08-02 - Version 3.0.2-dev

	- Fixed issue with updatable result sets and PreparedStatements not 
	  working
	- Fixed ResultSet.setFetchDirection(FETCH_UNKNOWN)
	- Fixed issue when calling Statement.setFetchSize() when using 
	  arbitrary values
	- Fixed incorrect conversion in ResultSet.getLong()
	- Implemented ResultSet.updateBlob().
    - Removed duplicate code from UpdatableResultSet (it can be inherited 
      from ResultSet, the extra code for each method to handle updatability
      I thought might someday be necessary has not been needed).
    - Fixed "UnsupportedEncodingException" thrown when "forcing" a 
      character encoding via properties.
    - Fixed various non-ASCII character encoding issues.
    - Added driver property 'useHostsInPrivileges'. Defaults to true. 
      Affects whether or not '@hostname' will be used in 
      DBMD.getColumn/TablePrivileges.
    - All DBMD result set columns describing schemas now return NULL
      to be more compliant with the behavior of other JDBC drivers
      for other databases (MySQL does not support schemas).
    - Added SSL support. See README for information on how to use it.
    - Properly restore connection properties when autoReconnecting
      or failing-over, including autoCommit state, and isolation level.
    - Use 'SHOW CREATE TABLE' when possible for determining foreign key
      information for DatabaseMetaData...also allows cascade options for
      DELETE information to be returned
    - Escape 0x5c character in strings for the SJIS charset.